# gtk4_layoutmanager

./: README.md  meson.build
data/: github.aeldemery.gtk4_layoutmanager.gresource.xml
source/: ColorRect.vala  Main.vala  MainWindow.vala  ShufflingLayoutManager.vala  ShufflingRectangles.vala
